# Django_Todo

./: .gitignore  db.sqlite3  pyproject.toml
todo/: admin.py  models.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_todo_priority.py  0003_todolist_rename_todo_todoitem.py
todo/templates/todo/: create_todo.html  index.html  list_todos.html  sign_up.html
todo/tests/: test.py
todo_list/: settings.py  urls.py
