[tool.poetry]
name = "todo_list"
version = "0.1.0"
description = ""
authors = ["Bilal Leadbitter <bilal.leadbitter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
