[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = ""
authors = ["Bilal Leadbitter <bilal.leadbitter@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "todo_list"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
ward = "^0.66.0-beta.0"
flake8 = "^4.0.1"
pydantic = "^1.9.1"

[tool.poetry.group.dev.dependencies]
pylint-django = "^2.5.2"
black = "^22.1.0"
pylint = "^2.12.2"
isort = "^5.10.1"
ptpython = "^3.0.20"

[tool.isort]
profile = "black"

[tool.pylint.master]
load-plugins = "pylint_django"
django-settings-module = "todo_list.settings"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
